@@ -42,7 +42,7 @@ public final class PropertiesTopComponent extends MTopComponent {
     public PropertiesTopComponent() {
         setName(Dict.PROPERTIES.toString());
         putClientProperty("print.printable", Boolean.TRUE); // NOI18N
-        putClientProperty("print.name", String.format("Mapton - %s", Dict.PROPERTIES.toString())); // NOI18N
+        putClientProperty("print.name", "Mapton - %s".formatted(Dict.PROPERTIES.toString())); // NOI18N
     }
 
     @Override
