@@ -56,7 +56,7 @@ public class FileExportAction extends FileAction {
                 SimpleDialog.addFilters("grid");
                 SimpleDialog.setFilter("grid");
 
-                final String dialogTitle = String.format("%s %s", Dict.EXPORT.toString(), mTitle.toLowerCase());
+                final String dialogTitle = "%s %s".formatted(Dict.EXPORT.toString(), mTitle.toLowerCase());
                 SimpleDialog.setTitle(dialogTitle);
 
                 if (mFile == null) {
