@@ -215,11 +215,11 @@ public abstract class LayerBundle {
     }
 
     public void setCategoryAddOns(Layer layer) {
-        setCategory(layer, String.format("- %s -", Dict.ADD_ONS.toString()));
+        setCategory(layer, "- %s -".formatted(Dict.ADD_ONS.toString()));
     }
 
     public void setCategorySystem(Layer layer) {
-        setCategory(layer, String.format("- %s -", Dict.SYSTEM.toString()));
+        setCategory(layer, "- %s -".formatted(Dict.SYSTEM.toString()));
     }
 
     public void setDragEnabled(boolean enabled, RenderableLayer... layers) {
